요구사항에서 공개 비공개 삭제

--- a/prj_1/요구사항 분석.md
+++ b/prj_1/요구사항 분석.md
@@ -16,10 +16,9 @@
 - 각 영화에 대해 평가를 할 수 있다. 이는 자신의 프로필에 추가된다.
 - 시스템의 추천 영화 리스트를 볼 수 있다.
 - 개인 피드를 통해 팔로우하는 사용자의 최근 평가를 볼 수 있다.
-- 공개한 다른 유저의 평가를 그 사용자 프로필을 통해 볼 수 있다. 비공개인 것은 보지 못한다.
+- 다른 유저의 평가를 그 사용자 프로필을 통해 볼 수 있다. 
 - 자신의 유저 아이디, 자기소개와 자신의 프로필 사진을 편집할 수 있다.
-- 자신의 평가를 삭제, 편집, 공개, 비공개할 수 있다.
-- 자신이 선호하는 것들의 목록을 설정, 편집, 공개, 비공개 할 수 있다.
+- 자신의 평가를 삭제, 편집할 수 있다.
+- 자신이 선호하는 것들의 목록을 설정, 편집할 수 있다.
 - 원하는 제작자 정보를 제작자 프로필에 들어가 열람할 수 있다.
 - 각 프로필안에 표시된 프로필을 통해 계속 연결되어 타고 들어가며 정보를 열람할 수 있다.
-
