--- a/prj_1/요구사항 분석.md
+++ b/prj_1/요구사항 분석.md
@@ -14,7 +14,8 @@
 
 - 유저는 이 시스템에 로그인을 할 수 있다. 
 - 유저는 각 영화에 대해 평가를 할 수 있다. 이는 자신의 프로필에 추가된다.
-- 유저는 자신의 유저 아이디, 자기소개와 자신의 프로필 사진을 편집할 수 있다.
+- 유저는 자신의 프로필 정보(유저 아이디, 자기소개와 자신의 프로필 사진)를 열람할 수 있다.
+- 유저는 자신의 프로필 정보(유저 아이디, 자기소개와 자신의 프로필 사진)를 편집할 수 있다.
 - 유저는 자신의 평가를 삭제, 편집할 수 있다.
 - 유저는 자신이 선호하는 것들의 목록을 설정, 편집할 수 있다.
 - 유저는 시스템의 추천 영화 리스트를 볼 수 있다.
