Refactor usecase formatting and add new usecases

--- a/prj_1/요구사항 분석.md
+++ b/prj_1/요구사항 분석.md
@@ -23,7 +23,8 @@
 - 유저와 관리자는 제작자 프로필에 들어가 제작자 정보를 열람할 수 있다.
 - 유저와 관리자는 원하는 영화 프로필에 들어가 영화 정보를 열람할 수 있다.
 - 유저와 관리자는 다른 유저의 프로필을 통해 해당 유저의 정보를 볼 수 있다.
+- 유저와 관리자는 어떤 유저의 리뷰를 열람할 수 있다.
 
 - 관리자는 영화 정보를 열람, 추가, 편집, 삭제할 수 있다.
 - 관리자는 제작자 정보를 열람, 추가, 편집, 삭제할 수 있다.
-- 관리자는 유저 정보를 열람, 삭제할 수 있다.
+- 관리자는 유저 정보를 열람, 삭제할 수 있다. 
