--- a/prj_1/요구사항 분석.md
+++ b/prj_1/요구사항 분석.md
@@ -14,7 +14,6 @@
 
 - 유저는 이 시스템에 로그인을 할 수 있다. 
 - 유저는 각 영화에 대해 평가를 할 수 있다. 이는 자신의 프로필에 추가된다.
-- 유저는 자신의 프로필 정보(유저 아이디, 자기소개와 자신의 프로필 사진)를 열람할 수 있다.
 - 유저는 자신의 프로필 정보(유저 아이디, 자기소개와 자신의 프로필 사진)를 편집할 수 있다.
 - 유저는 자신의 평가를 삭제, 편집할 수 있다.
 - 유저는 자신이 선호하는 것들의 목록을 설정, 편집할 수 있다.
@@ -22,7 +21,7 @@
 
 - 유저와 관리자는 제작자 프로필에 들어가 제작자 정보를 열람할 수 있다.
 - 유저와 관리자는 원하는 영화 프로필에 들어가 영화 정보를 열람할 수 있다.
-- 유저와 관리자는 다른 유저의 프로필을 통해 해당 유저의 정보를 볼 수 있다.
+- 유저와 관리자는 유저의 프로필을 통해 해당 유저의 정보를 볼 수 있다.
 - 유저와 관리자는 어떤 유저의 리뷰를 열람할 수 있다.
 
 - 관리자는 영화 정보를 열람, 추가, 편집, 삭제할 수 있다.
