--- a/prj_1/요구사항 분석.md
+++ b/prj_1/요구사항 분석.md
@@ -4,7 +4,7 @@
 ## 시스템이 가지는 정보
 - 영화에 대한 정보를 가진다. 영화 정보는 다음으로 구성된다. 영화id, 제목, 감독, 연출가, 각본가, 주연, 조연, 작곡가, 지원하는 상영 환경(돌비 아트모스, 아이맥스, 4D, 3D 등), 리뷰한 유저의 id
 
-- 사용자에 대한 정보를 가진다. 사용자 정보는 다음으로 구성된다. 유저 아이디, id, 암호화된 비밀번호, 간단한 자기 소개 문장, 프로필 사진, 선호 장르, 선호 배우, 선호 감독, 선호 각본가, 선호 작곡가, 선호 상영 환경
+- 사용자에 대한 정보를 가진다. 사용자 정보는 다음으로 구성된다. 유저 아이디, id, 암호화된 비밀번호, 선호 장르, 선호 배우, 선호 감독, 선호 각본가, 선호 작곡가, 선호 상영 환경
 
 - 제작자(감독, 배우, 각본가 등)의 정보를 가진다. 제작자 정보는 다음으로 구성된다. id, 사진, 이름(또는 활동명), 참여했던 영화 id
 
